kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matthewandhilary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary
  namespace: matthewandhilary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matthewandhilary
  template:
    metadata:
      labels:
        app: matthewandhilary
    spec:
      containers:
        - name: nginx
          image: spacez320/matthewandhilary:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary
  namespace: matthewandhilary
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: matthewandhilary
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matthewandhilary-https-redirect
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary-http
  namespace: matthewandhilary
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`matthewandhilary.info`)
      middlewares:
        - name: matthewandhilary-https-redirect
      kind: Rule
      services:
        - name: matthewandhilary
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary-https
  namespace: matthewandhilary
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matthewandhilary.info`)
      kind: Rule
      services:
        - name: matthewandhilary
          port: 80
  tls:
    secretName: matthewandhilary.info-tls
